# qcu

./: "clangd.format.tabSize": 4  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  NcclConfig.cmake  PyQuda  README.md  \  \.pub  __log.txt  _log.txt  bistabcg-np1-ZhangXin8069.txt  bistabcg-np2.txt  bistabcg-np2_new_nccl.txt  bistabcg-np2_old_mpi.txt  bistabcg-np2_old_nccl.txt  bistabcg-np2_tag0.txt  bistabcg-np2_tag00.txt  bistabcg-np2_tag002-3.txt  bistabcg-np2_tag002.txt  bistabcg-np2_tag1.txt  bistabcg-np2_tag4.txt  bml_env.sh  cg-np2_wjc.txt  clean.sh  cmake_install.cmake  computer-CMakeLists.txt  computer-env.sh  dslash-np1-ZhangXin8069.txt  env.sh  git-repo-clean  hip-prof-40817.db  install.sh  log.out  log.txt  main.ipynb  main.slides.html  (+52 more)
draft/: CMakeLists.txt  a.out  bicg_run.cu  bistabcg-np2_new_nccl.txt  lattice_bistabcg.h  lattice_bistabcg_tag0.h  lattice_dslash copy 2.h  lattice_dslash.h  mpi_wilson_bistabcg copy 2.cu  mpi_wilson_bistabcg copy.cu  nccl_wilson_bistabcg copy.cu  nccl_wilson_bistabcg.cu  test.cc  test.cu  test.mpi.bistabcg.qcu-np1.py  test.mpi.bistabcg.qcu-np2.py  test.mpi.dslash.qcu-np2.py  test.mpi.dslash.qcu-np4.py  test.nccl-wjc  test.nccl.redure.cu  test0 copy.cc  test_dslash copy 2.cc  wilson_dslash copy.cu  wilson_dslash.cu  wilson_dslash_0.cu  zuda_cpu.h
draft/.cache/: profile_0.tsv  profile_async_0.tsv
draft/.ipynb_checkpoints/: zuda_cpu copy-checkpoint.h  zuda_cpu-checkpoint.h  zuda_cpuX-checkpoint.h
draft/cuda/: mpi_wilson_bistabcg copy.cu  mpi_wilson_dslash copy 4.cu  mpi_wilson_dslash copy.cu  qcu_cuda.cu  qcu_mpi.cu
draft/git-repo-clean-1.4.2-Linux-64/: LICENSE  README.md
draft/git-repo-clean-1.4.2-Linux-64/docs/: lfs-migrate.md  repo-update.md  technical.md
refer/latticechina/: CMakeLists.txt  Makefile  README.md  dslashMain.cpp
refer/latticechina/demo/: README.md  inline_propagator_out_w.cc
refer/latticechina/inc/: dslash.h  lattice_fermion.h  lattice_gauge.h  lattice_propagator.h  operator.h  operator_mpi.h
refer/latticechina/src/: CMakeLists.txt  dslash.cpp  dslash_gpu.cpp  lattice_fermion.cpp  lattice_gauge.cpp  lattice_propagator.cpp
refer/qcu/: CMakeLists.txt  LICENSE  README.md  cg-np1-ZhangXin8069.txt  cg-np2.txt  cg-np2_new_mpi.txt  report1.nsys-rep  report1.sqlite  test.mpi.bistabcg-np1.sh  test.mpi.bistabcg-np2.sh  test.mpi.bistabcg-np4.sh  test.mpi.bistabcg-nsys.sh  test.mpi.cg-np1.sh  test.mpi.cg-np2.sh  test.mpi.cg-np4.sh  test.mpi.cg-nsys.sh  test.mpi.dslash-np1.sh  test.mpi.dslash-np2.sh  test.mpi.dslash-np4.sh  test.mpi.dslash-nsys.sh  x99_env.sh
refer/qcu/PyQuda/tests/: .slurm-52454989.out.swp  cg_nccl_4p.txt  dslash_mpi_16p.txt  dslash_nccl_4p.txt  dslash_out-60411897.txt  test.4_node_multi_16proc.py  test.ndslash.py  test.new_storage.py  test.nondebug_cg.py.bak  test_pure_cg.py
refer/qcu/include/: qcu_macro.cuh  timer.h
refer/qcu/include/algebra/: qcu_algebra.h
refer/qcu/include/basic_data/: qcu_complex.cuh  qcu_point.cuh
refer/qcu/include/comm/: qcu_communicator.h
refer/qcu/include/mempool/: qcu_mempool.h
refer/qcu/include/qcd/: qcu_dslash.cuh  qcu_wilson_dslash.cuh
refer/qcu/include/qcu_storage/: qcu_storage.cuh
refer/qcu/include/solver/: qcu_cg.h
refer/qcu/interface/: qcu.h
refer/qcu/lib/PyQuda-0.3.2.dist-info/: RECORD  (+1 more)
refer/qcu/src/: qcu.cu
refer/qcu/test/: CMakeLists.txt  log_ZhangXin8069_19237.nvvp.nsys-rep  log_ZhangXin8069_495969.nvvp.nsys-rep  log_ZhangXin8069_495969.nvvp.sqlite  log_x99-Yang_2015715.nvvp  log_x99-Yang_2015716.nvvp  log_x99-Yang_38033.nvvp  log_x99-Yang_38034.nvvp  log_x99-Yang_455586.nvvp  report1.sqlite  report10.nsys-rep  report10.sqlite  report11.nsys-rep  report11.sqlite  report12.sqlite  report2.nsys-rep  report3.nsys-rep  report3.sqlite  report4.nsys-rep  report4.sqlite  report5.sqlite  report6.nsys-rep  report7.nsys-rep  report7.sqlite  report8.nsys-rep  report8.sqlite  report9.nsys-rep  report9.sqlite  test-np1.sh  test-np2.sh  test-np4.sh  test.mpi.cg.qcu-np1 copy.py  test.mpi.cg.qcu-np1.py  test.mpi.cg.qcu-np2.py  test.mpi.cg.qcu-np4.py  test.mpi.dslash.qcu-np1.py  test.mpi.dslash.qcu-np2.py  test.mpi.dslash.qcu-np4.py  test.reduce.cu
refer/qcu/tests/: test_linear_algebra
refer/wjc_qcu/qcu/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.debug  Makefile  clean.sh  cmake_install.cmake  test  test.clover.sh  test.dslash.sh  test.mpi.cg.sh  test.mpi.dslash.sh
snsc-dcu/: "clangd.format.tabSize": 4  CMakeCache.txt  CMakeLists.txt  env.sh  report1.nsys-rep  report12.nsys-rep  report2.sqlite  report5.nsys-rep  test.bistabcg.qcu.sh  test.clover.sh  test.dslash.sh  test.mpi.bistabcg-np1.sh  test.mpi.bistabcg-np4.sh  test.mpi.dslash-np1.sh  test.mpi.dslash-np2.sh  test.mpi.dslash-np3.sh  test.mpi.dslash-np4.sh  test.mpi.dslash-np8.sh  test.mpi.dslash.sh  test.wilson.dslash.sh
test/: ...  .gitignore  .test.dslash.qcu.py.swo  .test.dslash.qcu.py.swp  .test.mpi.dslash..swp  .test.mpi.dslash.qcu.py.swp  .test.mpi.py.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists_quda.txt  CUDALibrarySamples  Makefile  _test.nccl.bistabcg.qcu-np2.py  a.out  bml.test.nccl-wjc.sh  clean.sh  cmake_install.cmake  computer-CMakeLists.txt  cuda_rand.cu  env.sh  gpu_info.cu  hip-prof-51615.db  log.csv  log.nsys-rep  log.nvvp  log.nvvp1605123  log.nvvp1605124  log.sqlite  log_jupyter-2019025-6688334_37289.nvvp  log_jupyter-2019025-6688334_39414.nvvp  log_x99-Yang_1100993.nvvp  log_x99-Yang_1121250.nvvp  log_x99-Yang_1121251.nvvp  log_x99-Yang_1214508.nvvp  log_x99-Yang_1214509.nvvp  log_x99-Yang_1218732.nvvp  log_x99-Yang_1218733.nvvp  log_x99-Yang_1228080.nvvp  log_x99-Yang_1228081.nvvp  log_x99-Yang_1232314.nvvp  (+179 more)
test/.cache/: profile_0.tsv  profile_async_0.tsv  tunecache.tsv  tunecache_error.tsv
test/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test-Copy1.dslash.qcu-checkpoint.py  test.clover.dslash.qcu-checkpoint.py  test.mpi.cg.qcu-checkpoint.py  test.mpi.dslash.qcu-checkpoint.py
test/PyQUDA-master/tests/: test.clover.ini.xml
test/tag4/: log_x99-Yang_435849.nvvp  log_x99-Yang_435850.nvvp
(+496 files in other folders)
