cmake_minimum_required(VERSION 3.8)
project(qcu LANGUAGES C CXX CUDA)
set(CMAKE_CXX_STANDARD 11)
set(SM_ARCH "sm_80")
set(CMAKE_CUDA_ARCHITECTURES "80")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=${SM_ARCH} -O3 -diag-suppress 20054")
set(MPI_INCLUDE_PATH "/usr/lib/x86_64-linux-gnu/openmpi/include")
set(MPI_CXX_LIBRARIES "/usr/lib/x86_64-linux-gnu/openmpi/lib/libmpi.so")
include(GNUInstallDirs)
include_directories(${CUDA_INCLUDE_PATH})
include_directories(${MPI_INCLUDE_PATH})
include_directories(./include)
# aux_source_directory(./src SOURCE_FILE)
aux_source_directory(src SOURCE_FILE)
add_library(qcu SHARED ${SOURCE_FILE})
find_package(MPI REQUIRED)
find_package(CUDA REQUIRED)
# target_link_libraries(qcu Eigen)
target_link_libraries(qcu ${MPI_C_LIBRARIES})
target_link_libraries(qcu ${CUDA_LIBRARIES})
target_link_libraries(qcu nccl)
target_link_libraries(qcu curand)
target_link_libraries(qcu cublas)