cmake_minimum_required(VERSION 3.8)
cmake_policy(SET CMP0074 NEW) 
project(qcu LANGUAGES C CXX CUDA)
set(CMAKE_CXX_STANDARD 11)
set(SM_ARCH "sm_80")
set(CMAKE_CUDA_ARCHITECTURES "80")
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -arch=${SM_ARCH} -O3 -l/public/home/zhangxin/external-libraries/nccl/build/lib")
set(NCCL_DIR "/public/home/zhangxin/external-libraries/nccl/build")
set(NCCL_INCLUDE_PATH ${NCCL_DIR}/include)
set(NCCL_INCLUDE_DIRS ${NCCL_DIR}/include)
set(NCCL_LIBRARIES ${NCCL_DIR}/lib)
set(CMAKE_PREFIX_PATH ${NCCL_DIR} ${CMAKE_PREFIX_PATH})
set(CMAKE_PREFIX_PATH . ${CMAKE_PREFIX_PATH})
include(GNUInstallDirs)
include_directories(${CUDA_INCLUDE_PATH})
include_directories(${MPI_INCLUDE_PATH})
include_directories(${NCCL_INCLUDE_PATH})
include_directories(./include)
aux_source_directory(./src SOURCE_FILE)
add_library(qcu SHARED ${SOURCE_FILE})
find_package(MPI REQUIRED)
find_package(CUDA REQUIRED)
find_package(Nccl REQUIRED)
target_link_libraries(qcu ${MPI_C_LIBRARIES})
target_link_libraries(qcu ${CUDA_LIBRARIES})
target_link_libraries(qcu curand)
target_link_libraries(qcu cublas)
target_link_libraries(qcu nccl) # there is a env bug, temp fix above